@@ -1,16 +1,23 @@
 man_MANS = grossd.8 grossd.conf.5
 
-EXTRA_DIST = grossd.8.in grossd.conf.5.in
+EXTRA_DIST = grossd.8.pod.in grossd.conf.5.pod.in
 
 CLEANFILES = $(man_MANS)
 
-SUFFIXES = .in
-
-.in:
+if HAVE_POD2MAN
+grossd.8: grossd.8.pod.in
 	@SED@ \
-	  -e 's!@''sysconfdir''@!@sysconfdir@!' \
-	  -e 's!@''sbindir''@!@sbindir@!' \
-	  -e 's!@''libdir''@!@libdir@!' \
-	  -e 's!@''VERSION''@!@VERSION@!' \
-	$< > $@
+          -e 's!@''sysconfdir''@!@sysconfdir@!' \
+          -e 's!@''sbindir''@!@sbindir@!' \
+          -e 's!@''libdir''@!@libdir@!' \
+          -e 's!@''VERSION''@!@VERSION@!' \
+        $< | $(POD2MAN) -c "" -r -s 8 -n grossd > $@
 
+grossd.conf.5: grossd.conf.5.pod.in
+	@SED@ \
+          -e 's!@''sysconfdir''@!@sysconfdir@!' \
+          -e 's!@''sbindir''@!@sbindir@!' \
+          -e 's!@''libdir''@!@libdir@!' \
+          -e 's!@''VERSION''@!@VERSION@!' \
+        $< | $(POD2MAN) -c "" -r -s 8 -n grossd.conf > $@
+endif
